--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -5,6 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Contactbtn from "@components/contactbtn.astro";
+import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-marina-del-rey.astro";
 import Unitscommercial from "@components/units-commercial-equipment-marina-del-rey.astro";
 
@@ -76,6 +77,7 @@ import "css/service-areas/style-service-areas.css";
         schedule.
       </p>
       <Unitsappliances />
+      <Btn />
 
       <h2>Commercial Appliance Repair Marina Del Rey CA</h2>
       <p>
@@ -240,7 +242,7 @@ import "css/service-areas/style-service-areas.css";
         schedule your same-day appointment!
       </p>
       <Unitscommercial />
-
+      <Btn />
       
 
 
@@ -331,7 +333,7 @@ import "css/service-areas/style-service-areas.css";
           Avanti, RCA, Hisense, and Blomberg.
         </p>
       </div>
-
+      <Btn />
 
 
 
@@ -583,7 +585,7 @@ import "css/service-areas/style-service-areas.css";
           do the work.
         </p>
       </div>
-
+      <Btn />
 
 
 
