--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -5,6 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Contactbtn from "@components/contactbtn.astro";
+import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-santa-monica.astro";
 import Unitscommercial from "@components/units-commercial-equipment-santa-monica.astro";
 
@@ -82,6 +83,7 @@ import "css/service-areas/style-service-areas.css";
         schedule your Santa Monica appliance repair today!
       </p>
       <Unitsappliances />
+      <Btn />
 
       <h2>
         <strong>Commercial Appliances Repair Santa Monica CA</strong>
@@ -96,6 +98,7 @@ import "css/service-areas/style-service-areas.css";
         appliance repair today!
       </p>
       <Unitscommercial />
+      <Btn />
 
       <div class="page-container">
         <div class="header-container">
@@ -269,6 +272,7 @@ import "css/service-areas/style-service-areas.css";
           appointment!
         </p>
       </div>
+      <Btn />
 
       <div class="page-container">
         <div class="header-container">
@@ -383,6 +387,7 @@ import "css/service-areas/style-service-areas.css";
           schedule same day appointments for the residents of Santa Monica area.
         </p>
       </div>
+      <Btn />
 
       <div class="page-container">
         <div class="header-container">
@@ -557,6 +562,17 @@ import "css/service-areas/style-service-areas.css";
           experienced with Hatsuyuki, Swan, Zeny, Great Northern and more.
           Weâ€™ll get your commercial ice shaver running fast.
         </p>
+      </div>
+        <Btn />
+
+
+
+
+
+
+
+
+
         <h2>Wine Cooler Repair Santa Monica CA</h2>
         <p>
           Wine cooler repair Santa Monica is necessary for preserving your wine
@@ -576,7 +592,7 @@ import "css/service-areas/style-service-areas.css";
           your appointment and store your wine in perfect conditions.
         </p>
         <p></p>
-      </div>
+      
     </div>
   </Container>
   <Cta />
