--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -5,8 +5,9 @@ import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
 import Contactbtn from "@components/contactbtn.astro";
-import Unitsappliances from "@components/units-appliances-marina-del-rey.astro";
-import Unitscommercial from "@components/units-commercial-equipment-marina-del-rey.astro";
+import Btn from "@components/btn.astro";
+import Unitsappliances from "@components/units-appliances-los-feliz.astro";
+import Unitscommercial from "@components/units-commercial-equipment-los-feliz.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -87,7 +88,7 @@ import "css/service-areas/style-service-areas.css";
         your Los Feliz appliance repair today!
       </p>
       <Unitsappliances />
-      
+      <Btn />
       
       
       
@@ -104,7 +105,7 @@ import "css/service-areas/style-service-areas.css";
         running. Call us to schedule your commercial appliance repair today!
       </p>
       <Unitscommercial />
-
+      <Btn />
 
 
 
@@ -280,7 +281,7 @@ import "css/service-areas/style-service-areas.css";
         Danby, Insignia, Avanti, RCA, Hisense and Blomberg.
       </p>
     </div>
-
+    <Btn />
 
 
 
@@ -479,7 +480,7 @@ import "css/service-areas/style-service-areas.css";
         We’ll get your commercial ice shaver up and running fast.
       </p>
     </div>
-      
+    <Btn />
       
       
       <h2>Wine Cooler Repair Los Feliz CA</h2><p>
