--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -14,7 +14,7 @@ import "css/service-areas/style-service-areas.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Appliance Repair Santa Monica - (424) 325-0520">
+<Layout title="Same Day Appliance Repair  Marina Del Rey">
   <Container>
     <div class="full-page">
       <div class="page-header">
