--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -71,6 +71,16 @@ const menuitems = [
       { title: "Santa Monica", path: "/areas/santa-monica" },
       { title: "Malibu", path: "/areas/malibu" },
       { title: "Los Angeles County", path: "/areas/los-angeles-and-surrounding-areas"},
+      { title: "Burbank", path: "/areas/burbank"},
+      { title: "Alhambra", path: "/areas/alhambra"},
+      { title: "Glendale", path: "/areas/glendale"},
+      { title: "Beverly Hills", path: "/areas/beverly-hills"},
+      { title: "Monterey Park", path: "/areas/monterey-park"},
+      { title: "Thousand Oaks", path: "/areas/thousand-oaks"},
+      { title: "West Hollywood", path: "/areas/west-hollywood"},
+      { title: "San Marino", path: "/areas/san-marino"},
+      { title: "South Pasadena", path: "/areas/south-pasadena"},
+      { title: "Glessell Park", path: "/areas/glessell-park"},
     ],
   },
 
