--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -163,7 +163,7 @@ import "css/service-areas/style-service-areas.css";
         </h3>
         <p style="text-align: start">
           Freezer repair Santa Monica is a concerning matter for LA residents.
-          Donâ€™t worry! We are here to get your freezer back in working order!
+          Don‘t worry! We are here to get your freezer back in working order!
           Our repairmen are well aware of any underlying cause of all possible
           malfunctions and any brands including Sub-Zero. In the summer, your
           freezer may act up due to the stress of cooling systems. Our experts
@@ -255,7 +255,7 @@ import "css/service-areas/style-service-areas.css";
           even when the microwave is unplugged. Exposure to microwave radiation
           also requires an expert. If your microwave is not heating, turntable
           components are not working, control panel malfunctions, or sparking is
-          taking place, donâ€™t hesitate to call us for the same day
+          taking place, don‘t hesitate to call us for the same day
           appointment!
         </p>
         <h3 style="text-align: start">
@@ -311,14 +311,14 @@ import "css/service-areas/style-service-areas.css";
         <p style="text-align: start">
           Are you looking for a washer repair Santa Monica? Santa Monica
           appliance repair is frequently called for washer problems during
-          spikes in the cityâ€™s humidity. Mold formation has been our biggest
+          spikes in the city‘s humidity. Mold formation has been our biggest
           concern because it can affect the health of your family members
           hitting hard the little and the elderly ones. To prevent mold
           formation, the laundry room needs to be properly ventilated, and the
           doors should not be left open after the washing cycle. We always
           recommend wiping the rubber seal dry! If you have mold in your washer,
           contact us immediately! Our technician will carry special chemicals
-          that remove the washerâ€™s mold.
+          that remove the washer‘s mold.
         </p>
         <p style="text-align: start">
           Our repairmen most frequently handle drum motor replacements, control
@@ -442,10 +442,10 @@ import "css/service-areas/style-service-areas.css";
         <h3>Commercial Dishwasher Repair Santa Monica CA</h3>
         <p>
           Timely commercial dishwasher repair Santa Monica is crucial to your
-          businessâ€™s hygiene standards. At Same Day Appliance Repair we fix
+          business‘s hygiene standards. At Same Day Appliance Repair we fix
           problems like improper cleaning, drainage issues, electrical problems.
           Our expert techs are knowledgeable with Hobart, Jackson, Miele, CMA
-          Dishmachines and other brands. Whatever the problem weâ€™ll have your
+          Dishmachines and other brands. Whatever the problem we‘ll have your
           commercial dishwasher up and running fast.
         </p>
         <h3>Commercial Stove Repair Santa Monica CA</h3>
@@ -465,7 +465,7 @@ import "css/service-areas/style-service-areas.css";
           electrical issues, Same Day Appliance Repair has you covered. Our
           techs are experts at repairing Speed Queen, Dexter, Maytag, Huebsch
           and other dryer brands. They are skilled with both electric and gas
-          models, so weâ€™ll get your commercial dryer up and running fast.
+          models, so we‘ll get your commercial dryer up and running fast.
         </p>
         <h3>Commercial Washer Repair Santa Monica CA</h3>
         <p>
@@ -474,7 +474,7 @@ import "css/service-areas/style-service-areas.css";
           washer repair Santa Monica before they become a big problem. At Same
           Day Appliance Repair our techs are trained to repair these and more.
           We service Continental Girbau, UniMac, Electrolux, Wascomat and other
-          brands. Weâ€™ll have your commercial washer fixed fast or can help
+          brands. We‘ll have your commercial washer fixed fast or can help
           with replacing your appliances altogether. Call us today for the best
           services in the area.
         </p>
@@ -492,11 +492,11 @@ import "css/service-areas/style-service-areas.css";
         <p>
           Commercial walk in cooler repair Santa Monica is the best solution for
           you before you decide on replacing. Proper temperature in your walk-in
-          cooler is crucial for food safety and quality. If youâ€™re
+          cooler is crucial for food safety and quality. If you‘re
           experiencing temperature fluctuations, compressor problems or door
           seal issues Same Day Appliance Repair can help! Our techs are
           knowledgeable with Norlake, Kolpak, Bally, Amerikooler and more.
-          Weâ€™ll get your walk-in cooler running smoothly or help you with
+          We‘ll get your walk-in cooler running smoothly or help you with
           replacing your appliances.
         </p>
         <h3>Commercial Walk In Freezer Repair Santa Monica CA</h3>
@@ -506,7 +506,7 @@ import "css/service-areas/style-service-areas.css";
           ice buildup, defrost problems or cooling issues Same Day Appliance
           Repair is here to help. Our techs have experience with Master-Bilt,
           Thermo-Kool, International Cold Storage, Imperial Brown and more.
-          Weâ€™ll get your walk-in freezer and other appliances fixed fast.
+          We‘ll get your walk-in freezer and other appliances fixed fast.
         </p>
         <h3>Commercial Ice Machine Repair Santa Monica CA</h3>
         <p>
@@ -515,7 +515,7 @@ import "css/service-areas/style-service-areas.css";
           you might need commercial ice machine repair Santa Monica. At Same Day
           Appliance Repair our techs are experts at diagnosing and fixing these
           problems. We service Scotsman, Ice-O-Matic, Manitowoc, Hoshizaki and
-          more. Weâ€™ll get your ice machine and other appliances up and
+          more. We‘ll get your ice machine and other appliances up and
           running fast or help replace them in case you decide the total cost of
           repair is comparable with a new unit.
         </p>
@@ -524,7 +524,7 @@ import "css/service-areas/style-service-areas.css";
           If you have lighting problems, temperature fluctuations or compressor
           failure Same Day Appliance Repair is here to help with your showcase
           refrigerator repair Santa Monica. Our techs service True, Turbo Air,
-          Structural Concepts, Beverage-Air and more. Weâ€™ll get your showcase
+          Structural Concepts, Beverage-Air and more. We‘ll get your showcase
           refrigerator running and looking good for displaying products while
           keeping them cool.
         </p>
@@ -534,7 +534,7 @@ import "css/service-areas/style-service-areas.css";
           cold drinks and keeping ingredients fresh. When you have cooling
           problems, leaks or electrical issues Same Day Appliance Repair has the
           solution. Our techs are knowledgeable with Perlick, U-Line, Marvel,
-          Summit and more. Weâ€™ll get your bar refrigerator running smoothly.
+          Summit and more. We‘ll get your bar refrigerator running smoothly.
         </p>
         <h3>Commercial Slushie Machine Repair Santa Monica CA</h3>
         <p>
@@ -542,7 +542,7 @@ import "css/service-areas/style-service-areas.css";
           like inconsistent freezing, mechanical failure or electrical issues.
           At Same Day Appliance Repair our techs are trained to fix these
           problems fast. We service Bunn, Elmeco, Frosty Factory, Carpigiani and
-          more. Weâ€™ll get your commercial slushie machine and other
+          more. We‘ll get your commercial slushie machine and other
           appliances fixed fast.
         </p>
         <h3>Commercial Fryer Machine Repair Santa Monica CA</h3>
@@ -560,7 +560,7 @@ import "css/service-areas/style-service-areas.css";
           or motor issues, commercial ice shaver repair Santa Monica is what you
           need. Same Day Appliance Repair is here to help! Our techs are
           experienced with Hatsuyuki, Swan, Zeny, Great Northern and more.
-          Weâ€™ll get your commercial ice shaver running fast.
+          We‘ll get your commercial ice shaver running fast.
         </p>
       </div>
         <Btn />
@@ -579,7 +579,7 @@ import "css/service-areas/style-service-areas.css";
           collection. If you have temperature fluctuations, compressor failure
           or faulty thermostat Same Day Appliance Repair has the solution. Our
           techs are knowledgeable with Vinotemp, EuroCave, Sub-Zero, Kalamera
-          and more. Weâ€™ll keep your wine cooler at the perfect temperature
+          and more. We‘ll keep your wine cooler at the perfect temperature
           for your wine.
         </p>
         <h2>Wine Cellar Repair Santa Monica CA</h2>
