--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -81,6 +81,10 @@ const menuitems = [
       { title: "San Marino", path: "/areas/san-marino"},
       { title: "South Pasadena", path: "/areas/south-pasadena"},
       { title: "Glessell Park", path: "/areas/glessell-park"},
+      { title: "East Hollywood", path: "/areas/east-hollywood"},
+      { title: "Playa Del Rey", path: "/areas/playa-del-rey"},
+      { title: "Downtown Los Angeles", path: "/areas/downtown-los-angeles"},
+      { title: "Ladera Heights", path: "/areas/ladera-heights"},
     ],
   },
 
