--- a/src/pages/areas/marina-del-rey.astro
+++ b/src/pages/areas/marina-del-rey.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-marina-del-rey.astro";
 import Unitscommercial from "@components/units-commercial-equipment-marina-del-rey.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,6 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
 
+        <Anchor />
         <p>
           Need appliance repair Marina Del Rey CA? You’re in the right place!
           Fast and reliable appliance repair services from our pros.
@@ -65,6 +67,8 @@ import "css/service-areas/style-service-areas.css";
         online on our website.
       </p>
 
+
+      <div  id="home-anchor">
       <h2>Home Appliance Repair Marina Del Rey, CA</h2>
       <p>
         Home appliance repair Marina Del Rey, CA includes household appliances
@@ -78,7 +82,13 @@ import "css/service-areas/style-service-areas.css";
       </p>
       <Unitsappliances />
       <Btn />
+    </div>
 
+
+
+
+
+      <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair Marina Del Rey CA</h2>
       <p>
         Commercial appliance repair Marina Del Rey, CA includes commercial
@@ -101,6 +111,10 @@ import "css/service-areas/style-service-areas.css";
         vintage stoves and other appliances.
       </p>
       <Unitscommercial />
+      </div>
+      
+
+
 
       
       <h3>Home Kitchen Appliance Repair Marina Del Rey</h3>
