--- a/src/pages/areas/alhambra.astro
+++ b/src/pages/areas/alhambra.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-alhambra.astro";
 import Unitscommercial from "@components/units-commercial-equipment-alhambra.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Need appliance repair Alhambra CA? We got you covered! We offer fast and professional home appliance repairs and
           maintenance services.</p>
         <p>We repair, maintain and install all your commercial or household appliances whether it’s a dryer, washer, dishwasher,
@@ -52,7 +55,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+  <div  id="home-anchor">
 <h2>Home Appliance Repair Alhambra CA</h2>
 <p>Home appliance repair Alhambra, California, includes repair, installation and maintenance of multiple major appliance
   brands and makes (lg refrigerator repair, freezer, dishwasher, oven, microwave, range hood, cooktop, ice maker etc.),
@@ -60,12 +63,12 @@ import "css/service-areas/style-service-areas.css";
   Alhambra appliance repair today!</p>
 <Unitsappliances />
 <Btn />
+</div>
 
 
 
 
-
-
+<div  id="commercial-anchor">
 <h2>Commercial Appliance Repair Alhambra CA</h2>
 <p>Commercial appliance repair Alhambra, California, includes commercial kitchen appliance repair, commercial laundry
   room appliance repair, bar appliance repair and showcase appliance repair. We also offer property management at a
@@ -74,7 +77,7 @@ import "css/service-areas/style-service-areas.css";
   issues today!</p>
 <Unitscommercial />
 <Btn />
-
+</div>
 
 
 
