--- a/src/pages/areas/beverly-hills.astro
+++ b/src/pages/areas/beverly-hills.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-beverly-hills.astro";
 import Unitscommercial from "@components/units-commercial-equipment-beverly-hills.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,6 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
       
+        <Anchor />
         <p>Looking for appliance repair Beverly Hills CA? You’re in the right place! Fast and professional home appliance repair
           services from our techs.</p>
         <p>We are a professional repair company dedicated to do all your commercial or home appliance repairs, maintenance
@@ -57,7 +59,7 @@ import "css/service-areas/style-service-areas.css";
   website.</p>
 
 
-
+  <div  id="home-anchor">
 <h2>Home Appliance Repair Beverly Hills, CA</h2>
 <p>Home appliance repair Beverly Hills, CA includes household appliances repair (refrigerator, freezer, dishwasher,
   oven, microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair (dryer repairs, washer repairs),
@@ -65,12 +67,12 @@ import "css/service-areas/style-service-areas.css";
   comprehensive care for your appliances today for a very good price!</p>
   <Unitsappliances />
   <Btn />
+</div>
 
 
 
 
-
-
+<div  id="commercial-anchor">
 <h2>Commercial Appliance Repair Beverly Hills CA</h2>
 <p>Commercial appliance repair Beverly Hills, CA includes commercial kitchen appliance repair, commercial laundry
   service appliance repair, bar appliance repair and showcase appliance repair. We also offer property management with
@@ -79,7 +81,7 @@ import "css/service-areas/style-service-areas.css";
   without breaking your monthly budget. Call us to schedule your commercial appliance repair today!</p>
 <Unitscommercial />
 <Btn />
-
+</div>
 
 
 
