--- a/src/pages/areas/burbank.astro
+++ b/src/pages/areas/burbank.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-malibu.astro";
 import Unitscommercial from "@components/units-commercial-equipment-malibu.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,6 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
        
+        <Anchor />
         <p>Need appliance repair Burbank CA? We got you covered! Fast and professional home appliance repair from our experts.
         </p>
         <p>We repair, maintain and install all your commercial or household appliances whether it’s a dryer, washer, dishwasher,
@@ -54,21 +56,21 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+  <div  id="home-anchor">
 <h2>Home Appliance Repair Burbank CA</h2>
 <p>Home appliance repair Burbank, California, includes kitchen appliance repair (refrigerator, freezer, dishwasher,
   oven, microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair, fireplace repair and barbecue
   grill repair. Whatever the unit call us to schedule your Burbank appliance repair today!</p>
 <Unitsappliances />
 <Btn />
+</div>
 
 
 
 
 
 
-
-
+<div  id="commercial-anchor">
 <h2>Commercial Appliance Repair Burbank CA</h2>
 <p>Commercial appliance repair Burbank, California, includes commercial kitchen appliance repair, commercial laundry
   room appliance repair, bar appliance repair and showcase appliance repair. We also offer property management at a
@@ -77,7 +79,7 @@ import "css/service-areas/style-service-areas.css";
   today!</p>
 <Unitscommercial />
 <Btn />
-
+</div>
 
 
 
