--- a/src/pages/areas/downtown-los-angeles.astro
+++ b/src/pages/areas/downtown-los-angeles.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-downtown-los-angeles.astro";
 import Unitscommercial from "@components/units-commercial-equipment-downtown-los-angeles.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,7 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
       
-       
+        <Anchor />
         <p>Looking for appliance repair service Downtown Los Angeles CA? You’re in the right place! Fast and professional home
           appliance repair services from our expert appliance repair services techs.</p>
         <p>We are a professional repair company dedicated to do all your commercial or home appliance repairs, maintenance
@@ -59,7 +60,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+        <div  id="home-anchor">
       <h2>Home Appliance Repair Downtown Los Angeles, CA</h2>
       <p>Home appliance repair Downtown Los Angeles, CA includes household appliances repair (refrigerator, freezer,
         dishwasher, oven, microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair (dryer repairs,
@@ -67,9 +68,9 @@ import "css/service-areas/style-service-areas.css";
         Angeles full and comprehensive care for your appliances today for a very good price!</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
-
-
+      <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair Downtown Los Angeles CA</h2>
       <p>Commercial appliance repair Downtown Los Angeles, CA includes commercial kitchen appliance repair, commercial laundry
         service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -85,7 +86,7 @@ import "css/service-areas/style-service-areas.css";
         us today and experience unmatched residential and commercial services with a free service call included!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
