--- a/src/pages/areas/east-hollywood.astro
+++ b/src/pages/areas/east-hollywood.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-east-hollywood.astro";
 import Unitscommercial from "@components/units-commercial-equipment-east-hollywood.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,7 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
       
-        
+        <Anchor />
 <p>Need appliance repair East Hollywood CA? You’re in the right place! Fast and reliable appliance repair services from
   our pros.</p>
 <p>We are a full-service repair company that does all your commercial or residential appliance repairs, maintenance
@@ -70,7 +71,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+<div  id="home-anchor">
 <h2>Home Appliance Repair East Hollywood, CA</h2>
 <p>Home appliance repair East Hollywood, CA includes household appliances repair (refrigerator, freezer, dishwasher,
   oven, microwave, range hood, cooktop, ice maker, etc.), laundry room repair (dryer repairs, washer repairs), fireplace
@@ -79,10 +80,10 @@ import "css/service-areas/style-service-areas.css";
   flexible scheduling to fit your busy schedule.</p>
   <Unitsappliances />
   <Btn />
+</div>
 
 
-
-
+<div  id="commercial-anchor">
 <h2>Commercial Appliance Repair East Hollywood CA</h2>
 <p>Commercial appliance repair East Hollywood, CA includes commercial kitchen appliance repair, commercial laundry
   service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -97,7 +98,7 @@ import "css/service-areas/style-service-areas.css";
 </p>
 <Unitscommercial />
 <Btn />
-
+</div>
 
 
 
