--- a/src/pages/areas/glendale.astro
+++ b/src/pages/areas/glendale.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-glendale.astro";
 import Unitscommercial from "@components/units-commercial-equipment-glendale.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Looking for appliance repair Glendale CA? You’re in the right place! Experience our fast and professional home
           appliance repair services from our expert technicians.</p>
         <p>We’ll take care of all your commercial or home appliance repairs, maintenance and installation whether it’s a dryer,
@@ -58,7 +61,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+      <div  id="home-anchor">
       <h2>Home Appliance Repair Glendale CA</h2>
       <p>Home appliance repair Glendale, CA, includes kitchen appliance repair (refrigerator, freezer, dishwasher, oven,
         microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair, fireplace repair and barbecue grill
@@ -66,14 +69,14 @@ import "css/service-areas/style-service-areas.css";
         at no extra cost!</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
 
 
 
 
 
-
-
+      <div  id="commercial-anchor"></div>
       <h2>Commercial Appliance Repair Glendale CA</h2>
       <p>Commercial appliance repair Glendale, CA, includes commercial kitchen appliance repair, commercial laundry room
         appliance repair, bar appliance repair and showcase appliance repair. We also offer property management with fair
@@ -82,7 +85,7 @@ import "css/service-areas/style-service-areas.css";
         manner. Call us to schedule your commercial appliance repair today!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
