--- a/src/pages/areas/glessell-park.astro
+++ b/src/pages/areas/glessell-park.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-glessell-park.astro";
 import Unitscommercial from "@components/units-commercial-equipment-glessell-park.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Need appliance repair in Glassell Park, CA? You’re in the right place! Fast and professional appliance repair
           services from our experts.</p>
         <p>We repair all commercial or home appliances, including repair, maintenance, and installation. Dryer, washer,
@@ -56,18 +59,18 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+      <div  id="home-anchor">
       <h2>Home Appliance Repair</h2>
       <p>Home appliance repair in Glassell Park, CA includes kitchen appliance repair (refrigerator, freezer, dishwasher,
         oven, microwave, range hoods, cooktop, ice maker, etc.), laundry room appliance repair, fireplace repair, and barbecue
         grill repair. Whatever the unit, call us to schedule your Glassell Park appliance repair today!</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
 
 
-
-
+      <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair Glassell Park CA</h2>
       <p>Commercial appliance repair in Glassell Park, CA includes commercial kitchen appliance repair, commercial laundry
         room appliance repair, bar appliance repair, and showcase appliance repair. We also offer property management with
@@ -75,7 +78,7 @@ import "css/service-areas/style-service-areas.css";
         and running. Call us to schedule your commercial appliance repair today!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
