--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-los-feliz.astro";
 import Unitscommercial from "@components/units-commercial-equipment-los-feliz.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,7 +32,7 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
-
+        <Anchor />
         <p>
           Need appliance repair Los Feliz CA? You’re in the right place!
           Experience our fast and professional home appliance repair services
@@ -78,7 +79,7 @@ import "css/service-areas/style-service-areas.css";
       
 
 
-
+      <div  id="home-anchor">
       <h2>Home Appliance Repair Los Feliz CA</h2>
       <p>
         Home appliance repair Los Feliz, CA includes kitchen appliance repair
@@ -89,12 +90,12 @@ import "css/service-areas/style-service-areas.css";
       </p>
       <Unitsappliances />
       <Btn />
+    </div>
       
       
       
       
-      
-      
+    <div  id="commercial-anchor">
       <h2>Commercial Appliances Repair Los Feliz CA</h2>
       <p>
         Commercial appliance repair Los Feliz, CA includes commercial kitchen
@@ -106,7 +107,7 @@ import "css/service-areas/style-service-areas.css";
       </p>
       <Unitscommercial />
       <Btn />
-
+    </div>
 
 
 
