--- a/src/pages/areas/malibu.astro
+++ b/src/pages/areas/malibu.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-malibu.astro";
 import Unitscommercial from "@components/units-commercial-equipment-malibu.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Need appliance repair Malibu CA? You are in the right place! Experience our fast and professional home appliance
           repair service from our skilled technicians.</p>
         <p>We will repair, maintain and install all your commercial or home appliances whether it is a dryer, washer,
@@ -53,16 +56,20 @@ import "css/service-areas/style-service-areas.css";
   right. You can schedule your appointment: just call us or book a first visit online on our website.</p>
 
 
-
+  <div  id="home-anchor">
 <h2>Home Appliance Repair Malibu CA</h2>
 <p>Home appliance repair Malibu, CA, includes kitchen appliance repair (refrigerator, freezer, dishwasher, oven,
   microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair, fireplace repair and barbecue grill
   repair. Whatever the unit call us to schedule your Malibu appliance repair today!</p>
   <Unitsappliances />
   <Btn />
+</div>
 
 
 
+
+
+  <div  id="commercial-anchor">
 <h2>Commercial Appliance Repair Malibu CA</h2>
 <p>Commercial appliance repair Malibu, CA, includes commercial kitchen appliance repair, commercial laundry room
   appliance repair, bar appliance repair and showcase appliance repair. We also offer property management with
@@ -70,7 +77,7 @@ import "css/service-areas/style-service-areas.css";
   business back up and in working order. Call us to schedule your commercial appliance repair today!</p>
   <Unitscommercial />
   <Btn />
-
+</div>
 
 
   <div class="page-container">
