--- a/src/pages/areas/playa-del-rey.astro
+++ b/src/pages/areas/playa-del-rey.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-playa-del-rey.astro";
 import Unitscommercial from "@components/units-commercial-equipment-playa-del-rey.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,6 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
       
+        <Anchor />
         <p>Need appliance repair Playa Del Rey CA? You’re here! Fast and reliable home appliance repair from our qualified
           technicians.</p>
         <p>We are a professional repair company that does all your commercial or home appliance repairs, maintenance services,
@@ -57,7 +59,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+        <div  id="home-anchor">
       <h2>Home Appliance Repair Playa Del Rey, CA</h2>
       <p>Home appliance repair Playa Del Rey, CA includes household appliances repair (refrigerator, freezer, dishwasher,
         oven, microwave, range hood, cooktop, ice maker, etc.), laundry room appliance repair (dryer repair, washer repair),
@@ -66,9 +68,9 @@ import "css/service-areas/style-service-areas.css";
         needs.</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
-
-
+        <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair Playa Del Rey CA</h2>
       <p>Commercial appliance repair Playa Del Rey, CA includes commercial kitchen appliance repair, commercial laundry
         service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -78,7 +80,7 @@ import "css/service-areas/style-service-areas.css";
         repair today!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
