--- a/src/pages/areas/san-marino.astro
+++ b/src/pages/areas/san-marino.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-san-marino.astro";
 import Unitscommercial from "@components/units-commercial-equipment-san-marino.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,7 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
         
- 
+        <Anchor />
         <p>Need appliance repair San Marino CA? You’re here! Fast and reliable home appliance repair services from our dedicated
           techs.</p>
         <p>We are a professional appliance repair company that does all your commercial or home appliance repairs, maintenance
@@ -59,7 +60,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+        <div  id="home-anchor">
       <h2>Home Appliance Repair San Marino, CA</h2>
       <p>Home appliance repair San Marino, CA includes household appliances repair (refrigerator, freezer, dishwasher, oven,
         microwave, range hood, cooktop, ice maker, etc.), laundry room appliance repair (dryer repair, washer repair),
@@ -68,12 +69,12 @@ import "css/service-areas/style-service-areas.css";
         your busy schedule.</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
 
 
 
-
-
+      <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair San Marino CA</h2>
       <p>Commercial appliance repair San Marino, CA includes commercial kitchen appliance repair, commercial laundry service
         appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also offer
@@ -88,7 +89,7 @@ import "css/service-areas/style-service-areas.css";
         be completely satisfied with our repair services – a few reasons why you should request our services today!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
