--- a/src/pages/areas/south-pasadena.astro
+++ b/src/pages/areas/south-pasadena.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-south-pasadena.astro";
 import Unitscommercial from "@components/units-commercial-equipment-south-pasadena.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -32,6 +33,7 @@ import "css/service-areas/style-service-areas.css";
           <Contactbtn />
         </div>
         
+        <Anchor />
         <p>Need appliance repair South Pasadena CA? You’re in the right place! Fast and reliable appliance repair services from
           our pros.</p>
         <p>We are a full service repair company that does all your commercial or residential appliance repairs, maintenance
@@ -60,7 +62,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+        <div  id="home-anchor">
       <h2>Home Appliance Repair South Pasadena, CA</h2>
       <p>Home appliance repair South Pasadena, CA includes household appliances repair (refrigerator, freezer, dishwasher,
         oven, microwave, range hood, cooktop, ice maker, garbage disposal, etc.), laundry room repair (dryer repairs, washer
@@ -69,11 +71,11 @@ import "css/service-areas/style-service-areas.css";
         also offer flexible scheduling to fit your busy schedule.</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
 
 
-
-
+        <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair South Pasadena CA</h2>
       <p>Commercial appliance repair South Pasadena, CA includes commercial kitchen appliance repair, commercial laundry
         service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -86,7 +88,7 @@ import "css/service-areas/style-service-areas.css";
         Highly recommended by our customers, we have extensive knowledge of vintage stoves and other appliances.</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
