--- a/src/pages/areas/thousand-oaks.astro
+++ b/src/pages/areas/thousand-oaks.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-thousand-oaks.astro";
 import Unitscommercial from "@components/units-commercial-equipment-thousand-oaks.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Looking for appliance repair Thousand Oaks CA? You’re in the right place! Fast and professional home appliance repair
           services from our techs.</p>
         <p>We are a professional repair company dedicated to do all your commercial or home appliance repairs, maintenance
@@ -54,7 +57,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+        <div  id="home-anchor">
       <h2>Home Appliance Repair Thousand Oaks, CA</h2>
       <p>Home appliance repair Thousand Oaks, CA includes household appliances repair (refrigerator, freezer, dishwasher,
         oven, microwave, range hood, cooktop, ice maker etc.), laundry room appliance repair (dryer repair, washer repair),
@@ -62,11 +65,11 @@ import "css/service-areas/style-service-areas.css";
         comprehensive care for your appliances today for a very good price!</p>
         <Unitsappliances />
         <Btn />
+      </div>
 
 
 
-
-
+        <div  id="commercial-anchor">
       <h2>Commercial Appliance Repair Thousand Oaks CA</h2>
       <p>Commercial appliance repair Thousand Oaks, CA includes commercial kitchen appliance repair, commercial laundry
         service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -76,7 +79,7 @@ import "css/service-areas/style-service-areas.css";
         repair today!</p>
         <Unitscommercial />
         <Btn />
-
+      </div>
 
 
 
