--- a/src/pages/areas/west-hollywood.astro
+++ b/src/pages/areas/west-hollywood.astro
@@ -8,6 +8,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Unitsappliances from "@components/units-appliances-west-hollywood.astro";
 import Unitscommercial from "@components/units-commercial-equipment-west-hollywood.astro";
+import Anchor from "@components/anchor/anchor-areas.astro";
 
 import "css/service-areas/style-service-areas.css";
 ---
@@ -31,6 +32,8 @@ import "css/service-areas/style-service-areas.css";
           />
           <Contactbtn />
         </div>
+
+        <Anchor />
         <p>Need appliance repair West Hollywood CA? You’re here! Fast and reliable home appliance repair from our qualified
           technicians.</p>
         <p>We are a professional repair company that does all your commercial or home appliance repairs, maintenance services,
@@ -58,7 +61,7 @@ import "css/service-areas/style-service-areas.css";
 
 
 
-
+  <div  id="home-anchor">
 <h2>Home Appliance Repair West Hollywood, CA</h2>
 <p>Home appliance repair West Hollywood, CA includes household appliances repair (refrigerator, freezer, dishwasher,
   oven, microwave, range hood, cooktop, ice maker, etc.), laundry room appliance repair (dryer repair, washer repair),
@@ -67,10 +70,10 @@ import "css/service-areas/style-service-areas.css";
   needs.</p>
   <Unitsappliances />
   <Btn />
+</div>
 
 
-
-
+  <div  id="commercial-anchor">
 <h2>Commercial Appliance Repair West Hollywood CA</h2>
 <p>Commercial appliance repair West Hollywood, CA includes commercial kitchen appliance repair, commercial laundry
   service appliance repair (dryer repair, washer repair), bar appliance repair and showcase appliance repair. We also
@@ -80,6 +83,7 @@ import "css/service-areas/style-service-areas.css";
   repair today!</p>
   <Unitscommercial />
   <Btn />
+</div>
 
 
 
