--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -91,6 +91,11 @@ const menuitems = [
   {
     title: "Brands",
     path: "/brands/commercial-and-household",
+    children: [
+      { title: "Home Brands", path: "/brands/commercial-and-household" },
+    { title: "Maytag", path: "/brands/maytag" },
+
+    ],
   },
   
   {
