--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -1,45 +1,47 @@
 ---
 import "@components/css-components/reviews.css";
 ---
+
 <div class="reviews reviews-header">
-
   <div class="reviews-content">
-
     <p>
       <a href="#reviews" title="reviews"
         ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
         (Google Rating) (Thumbtack Rating)
       </a>
     </p>
-
+ 
     <div class="header-licenses-foto">
-
       <div>
         <img
           src="/images/same-day-appliance-repair-licensed-2.webp"
           width="130"
-          height="90" alt="Same Day Appliance Repair licensed"
+          height="90"
+          alt="Same Day Appliance Repair licensed"
         />
       </div>
       <div>
         <img
           src="/images/same-day-appliance-repair-insured-2.webp"
           width="112"
-          height="90" alt="Same Day Appliance Repair insured"
+          height="90"
+          alt="Same Day Appliance Repair insured"
         />
       </div>
       <div>
         <img
           src="/images/same-day-appliance-repair-epa-certified-2.webp"
           width="165"
-          height="90" alt="Same Day Appliance Repair epa certified"
+          height="90"
+          alt="Same Day Appliance Repair epa certified"
         />
       </div>
       <div>
         <img
           src="/images/same-day-appliance-repair-osha-trained-2.webp"
           width="98"
-          height="90" alt="Same Day Appliance Repair osha trained"
+          height="90"
+          alt="Same Day Appliance Repair osha trained"
         />
       </div>
       <div>
@@ -47,7 +49,8 @@ import "@components/css-components/reviews.css";
           style="border-radius:45px;"
           src="/images/same-day-applaince-repair-nate-certified-2.webp"
           width="90"
-          height="90" alt="Same Day Appliance Repair nate certified"
+          height="90"
+          alt="Same Day Appliance Repair nate certified"
         />
       </div>
       <div>
@@ -55,12 +58,10 @@ import "@components/css-components/reviews.css";
           style="border-radius:10px;"
           src="/images/same-day-appliance-repair-background-checked-2.webp"
           width="100px"
-          height="90px" alt="Same Day Appliance Repair background check"
+          height="90px"
+          alt="Same Day Appliance Repair background check"
         />
       </div>
-
     </div>
-
   </div>
-  
 </div>
