--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -5,9 +5,8 @@ import "@components/css-components/reviews.css";
 <div class="reviews reviews-header">
   <div class="reviews-content">
     <p>
-      <a href="#reviews" title="reviews"
-        ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
-        (Google Rating) (Thumbtack Rating)
+      <a href="#reviews" title="reviews">
+        Reviews ⭐⭐⭐⭐⭐ 5.0 (Google Rating) (Thumbtack Rating)
       </a>
     </p>
  
@@ -15,16 +14,16 @@ import "@components/css-components/reviews.css";
       <div>
         <img
           src="/images/same-day-appliance-repair-licensed-2.webp"
-          width="130"
-          height="90"
+          width="130px"
+          height="90px"
           alt="Same Day Appliance Repair licensed"
         />
       </div>
       <div>
         <img
           src="/images/same-day-appliance-repair-insured-2.webp"
-          width="112"
-          height="90"
+          width="112px"
+          height="90px"
           alt="Same Day Appliance Repair insured"
         />
       </div>
@@ -39,8 +38,8 @@ import "@components/css-components/reviews.css";
       <div>
         <img
           src="/images/same-day-appliance-repair-osha-trained-2.webp"
-          width="98"
-          height="90"
+          width="98px"
+          height="90px"
           alt="Same Day Appliance Repair osha trained"
         />
       </div>
@@ -48,8 +47,8 @@ import "@components/css-components/reviews.css";
         <img
           style="border-radius:45px;"
           src="/images/same-day-applaince-repair-nate-certified-2.webp"
-          width="90"
-          height="90"
+          width="90px"
+          height="90px"
           alt="Same Day Appliance Repair nate certified"
         />
       </div>
