test-onclick-onClick

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -93,7 +93,7 @@ const menuitems = [
     path: "/brands/commercial-and-household",
     children: [
       { title: "Home Brands", path: "/brands/commercial-and-household" },
-    { title: "Maytag", path: "/brands/maytag" },
+      { title: "Maytag", path: "/brands/maytag" },
 
     ],
   },
@@ -215,10 +215,9 @@ const menuitems = [
 ];
 ---
 
-<Layout>
+<Layout title="SAME DAY APPLIANCE REPAIR">
   <Container>
-    <header
-      class="flex flex-col lg:flex-row justify-between items-center my-5 header-full">
+    <header class="flex flex-col lg:flex-row justify-between items-center my-5 header-full">
       <div class="inside-reviews_header-full">
         <div class="inside_header-full">
           <Astronav>
@@ -250,7 +249,7 @@ const menuitems = [
                     data-token="9e68ce292ba246dbba0fe928b98791f7"
                     data-orgname="Same-Day-Appliance-Repair"
                     class="hcp-button"
-                    onClick="HCPWidget.openModal()">
+                    onclick="HCPWidget.openModal()">
                     BOOK NOW!
                   </button>
                   <script
@@ -313,7 +312,7 @@ const menuitems = [
                   data-token="9e68ce292ba246dbba0fe928b98791f7"
                   data-orgname="Same-Day-Appliance-Repair"
                   class="hcp-button"
-                  onClick="HCPWidget.openModal()">
+                  onclick="HCPWidget.openModal()">
                   Book!
                 </button>
                 <script
