--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -94,6 +94,7 @@ const menuitems = [
     children: [
       { title: "Home Brands", path: "/brands/commercial-and-household" },
       { title: "Maytag", path: "/brands/maytag" },
+      { title: "Viking", path: "/brands/viking-repair" },
 
     ],
   },
