--- a/src/pages/services/heat-pump-repair.astro
+++ b/src/pages/services/heat-pump-repair.astro
@@ -35,7 +35,7 @@ import "css/service/style_services.css";
             <img
               width="2000px"
               height="1000px"
-              src="/commercial-oven-stove/commercial-oven-page_header_photos.webp"
+              src="/heat-pump/heat-pump-page_header_photos.webp"
               alt="Heat Pump Repair Los Angeles"
             />
           </div>
@@ -149,11 +149,11 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-1.webp"
+                src="/heat-pump/1-heat-pump.webp"
                 loading="lazy"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="HEAT PUMP REPAIR"
               />
             </div>
 
@@ -243,10 +243,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-2.webp"
+                src="/heat-pump/2-heat-pump.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="HEAT PUMP REPAIR"
                 loading="lazy"
               />
             </div>
@@ -366,10 +366,10 @@ import "css/service/style_services.css";
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
             <div class="content__page-desc-phot">
               <img
-                src="/commercial-oven-stove/commercial-oven-3.webp"
+                src="/heat-pump/3-heat-pump.webp"
                 width="450px"
                 height="450px"
-                alt="Commercial Stove Repair"
+                alt="HEAT PUMP REPAIR"
                 loading="lazy"
               />
             </div>
@@ -515,7 +515,19 @@ import "css/service/style_services.css";
             <div class="content__page-hed-desc"></div>
           </div>
 
-          <div class="content__page-full-desc">
+          <div class="content__page-full-desc content__page-full-desc-ph-ri">
+
+            <div class="content__page-desc-phot">
+              <img
+                src="/heat-pump/5-heat-pump.webp"
+                width="450px"
+                height="450px"
+                alt="HEAT PUMP REPAIR"
+                loading="lazy"
+              />
+            </div>
+
+
             <div class="content__page-desc">
               <p>
                 Deciding whether to repair or replace a heat pump can be a
