--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -57,6 +57,11 @@ const menuitems = [
     children: [
     { title: "HVAC Services", path: "/services/hvac-repair-los-angeles" },
     { title: "Furnace Repair", path: "/services/furnace-repair-los-angeles" },
+    { title: "Heat Pump Repair", path: "/services/heat-pump-repair-los-angeles" },
+    { title: "Water Heater Repair", path: "/services/water-heater-repair-los-angeles" },
+    { title: "Wall Heater Repair", path: "/services/wall-heater-repair-los-angeles" },
+    { title: "Air Conditioner Repair", path: "/services/air-conditioner-repair-los-angeles" },
+    { title: "Air Ducts Cleaning and Repair", path: "/services/air-ducts-cleaning-and-repair-los-angeles" },
     ],
   },
 
