--- a/src/pages/services/air-ducts-cleaning-and-repair-los-angeles.astro
+++ b/src/pages/services/air-ducts-cleaning-and-repair-los-angeles.astro
@@ -192,7 +192,6 @@ import "css/service/style_services.css";
               </p>
             </div>
           </div>
-          <Btn />
         </div>
 
         <div class="page213-content" id="left-menu-3">
@@ -204,15 +203,7 @@ import "css/service/style_services.css";
           </div>
 
           <div class="content__page-full-desc content__page-full-desc-ph-ri">
-            <div class="content__page-desc-phot">
-              <img
-                src="/commercial-oven-stove/commercial-oven-2.webp"
-                width="450px"
-                height="450px"
-                alt="Commercial Stove Repair"
-                loading="lazy"
-              />
-            </div>
+            
 
             <div class="content__page-desc">
               <p>Maintaining clean air ducts is crucial for ensuring a healthy living environment. Dust, allergens, and other pollutants trapped in your ductwork can circulate throughout your home, potentially triggering allergies, asthma, and other respiratory issues. Moreover, a clean air duct system improves the efficiency of your HVAC system, leading to lower energy bills and a more comfortable living space. Regular air duct cleaning not only enhances air quality but also prolongs the lifespan of your HVAC system, saving you money in the long run. With our professional air duct cleaning and repair services starting at just <b>$299</b>, investing in your home's air quality has never been more accessible. Contact us today to schedule an appointment and breathe easier.</p>
@@ -244,7 +235,6 @@ import "css/service/style_services.css";
              <p>Air duct cleaning is a comprehensive process designed to remove dust, debris, and other contaminants from your HVAC system's ductwork. This service aims to improve indoor air quality, enhance HVAC efficiency, and extend the system's lifespan. Professional technicians use specialized tools and equipment to dislodge and extract accumulated pollutants, ensuring that the air circulating through your home or office is clean and safe to breathe.</p>
             </div>
           </div>
-          <Btn />
         </div>
 
         <div class="page213-content" id="left-menu-5">
@@ -281,6 +271,15 @@ import "css/service/style_services.css";
           </div>
 
           <div class="content__page-full-desc">
+            <div class="content__page-desc-phot">
+              <img
+                src="/commercial-oven-stove/commercial-oven-3.webp"
+                width="450px"
+                height="450px"
+                alt="Commercial Stove Repair"
+                loading="lazy"
+              />
+            </div>
             <div class="content__page-desc">
               <b>How Cleaning Reduces Allergens, Dust, and Pollutants</b>
               <p>Over time, your air ducts can become a reservoir for dust, allergens, and various pollutants. Regular air duct cleaning removes these contaminants, preventing them from circulating throughout your home. This leads to a significant reduction in the particles that contribute to poor indoor air quality, ensuring that the air you breathe is cleaner and healthier.</p>
@@ -612,7 +611,16 @@ import "css/service/style_services.css";
             <div class="content__page-hed-desc"></div>
           </div>
 
-          <div class="content__page-full-desc">
+          <div class="content__page-full-desc content__page-full-desc-ph-ri">
+            <div class="content__page-desc-phot">
+              <img
+                src="/commercial-oven-stove/commercial-oven-3.webp"
+                width="450px"
+                height="450px"
+                alt="Commercial Stove Repair"
+                loading="lazy"
+              />
+            </div>
             <div class="content__page-desc">
               <p>
                 Maintaining a clean and efficient HVAC system is crucial for the comfort and health of your home. At Same Day Appliance Repair, we understand the importance of well-maintained air ducts, and we’re here to provide you with top-notch air duct cleaning and repair services. Below, we’ll explain why these services are essential and how we can help you achieve optimal indoor air quality and system performance.
